fix: use min sdk compatible URL codec overloads